[gd_scene load_steps=2 format=3 uid="uid://qvjyhujbij44"]

[ext_resource type="Script" path="res://Scenes/AuthScene.gd" id="1_exob3"]

[node name="AuthScene" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_exob3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -96.0
offset_right = 200.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
alignment = 1
clear_button_enabled = true
caret_blink = true
secret = true
secret_character = "ðŸ˜±"

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="SignupButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Register"

[node name="QuickPlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue as Guest"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status ..."
